@@ -1,5 +1,5 @@
 # SPVM::Complex_2d is created by regen/regen_complex.pl
 package SPVM::Complex_2d : mulnum_t {
-  has re : double;
-  has im : double;
+  has x : double;
+  has y : double;
 }
