@@ -1,5 +1,5 @@
 # SPVM::Complex_2f is created by regen/regen_complex.pl
 package SPVM::Complex_2f : mulnum_t {
-  has re : float;
-  has im : float;
+  has x : float;
+  has y : float;
 }
