@@ -1,5 +1,5 @@
 # SPVM::Complex_2i is created by regen/regen_complex.pl
 package SPVM::Complex_2i : mulnum_t {
-  has re : int;
-  has im : int;
+  has x : int;
+  has y : int;
 }
