@@ -1,5 +1,5 @@
 # SPVM::Complex_2l is created by regen/regen_complex.pl
 package SPVM::Complex_2l : mulnum_t {
-  has re : long;
-  has im : long;
+  has x : long;
+  has y : long;
 }
