@@ -8,7 +8,7 @@ package TestCase::Complex {
     my $z_in2 = complexd(0.5, 0.125);
     my $z_out = $z_in1 + $z_in2;
     
-    if ($z_out->{re} == 0.75 && $z_out->{im} == 0.625) {
+    if ($z_out->{x} == 0.75 && $z_out->{y} == 0.625) {
       return 1;
     }
     
@@ -19,7 +19,7 @@ package TestCase::Complex {
     my $z_in2 = complexd(0, 0);
     my $z_out = $z_in1 + $z_in2;
     
-    if ($z_out->{re} == DBL_MIN() && $z_out->{im} == DBL_MIN()) {
+    if ($z_out->{x} == DBL_MIN() && $z_out->{y} == DBL_MIN()) {
       return 1;
     }
     
@@ -31,7 +31,7 @@ package TestCase::Complex {
     my $z_in2 = complexd(0.5, 0.125);
     my $z_out = $z_in1 - $z_in2;
     
-    if ($z_out->{re} == -0.25 && $z_out->{im} == 0.375) {
+    if ($z_out->{x} == -0.25 && $z_out->{y} == 0.375) {
       return 1;
     }
     
@@ -42,7 +42,7 @@ package TestCase::Complex {
     my $z_in2 = complexd(0, 0);
     my $z_out = $z_in1 - $z_in2;
     
-    if ($z_out->{re} == DBL_MIN() && $z_out->{im} == DBL_MIN()) {
+    if ($z_out->{x} == DBL_MIN() && $z_out->{y} == DBL_MIN()) {
       return 1;
     }
     
@@ -54,7 +54,7 @@ package TestCase::Complex {
     my $z_in2 = complexd(0.5, 0.125);
     my $z_out = $z_in1 * $z_in2;
     
-    if ($z_out->{re} == 0.0625 && $z_out->{im} == 0.28125) {
+    if ($z_out->{x} == 0.0625 && $z_out->{y} == 0.28125) {
       return 1;
     }
     
@@ -65,7 +65,7 @@ package TestCase::Complex {
     my $z_in2 = complexd(1, 1);
     my $z_out = $z_in1 * $z_in2;
     
-    if ($z_out->{re} == DBL_MIN() && $z_out->{im} == DBL_MIN()) {
+    if ($z_out->{x} == DBL_MIN() && $z_out->{y} == DBL_MIN()) {
       return 1;
     }
     
@@ -77,7 +77,7 @@ package TestCase::Complex {
     my $z_in2 = complexd(0.5, 0.125);
     my $z_out = $z_in1 / $z_in2;
     
-    if (($z_out->{re} - 0.70588) < 0.00001 && ($z_out->{im} - 0.82352) < 0.00001) {
+    if (($z_out->{x} - 0.70588) < 0.00001 && ($z_out->{y} - 0.82352) < 0.00001) {
       return 1;
     }
     
@@ -89,7 +89,7 @@ package TestCase::Complex {
     my $z_in2 = complexd(1, 0);
     my $z_out = $z_in1 / $z_in2;
     
-    if ($z_out->{re} == DBL_MIN() && $z_out->{im} == 0) {
+    if ($z_out->{x} == DBL_MIN() && $z_out->{y} == 0) {
       return 1;
     }
     
@@ -101,7 +101,7 @@ package TestCase::Complex {
     my $z_in2 = complexf(0.5f, 0.125f);
     my $z_out = $z_in1 + $z_in2;
     
-    if ($z_out->{re} == 0.75 && $z_out->{im} == 0.625) {
+    if ($z_out->{x} == 0.75 && $z_out->{y} == 0.625) {
       return 1;
     }
     
@@ -112,7 +112,7 @@ package TestCase::Complex {
     my $z_in2 = complexf(0, 0);
     my $z_out = $z_in1 + $z_in2;
     
-    if ($z_out->{re} == FLT_MIN() && $z_out->{im} == FLT_MIN()) {
+    if ($z_out->{x} == FLT_MIN() && $z_out->{y} == FLT_MIN()) {
       return 1;
     }
     
@@ -124,7 +124,7 @@ package TestCase::Complex {
     my $z_in2 = complexf(0.5f, 0.125f);
     my $z_out = $z_in1 - $z_in2;
     
-    if ($z_out->{re} == -0.25 && $z_out->{im} == 0.375) {
+    if ($z_out->{x} == -0.25 && $z_out->{y} == 0.375) {
       return 1;
     }
     
@@ -135,7 +135,7 @@ package TestCase::Complex {
     my $z_in2 = complexf(0, 0);
     my $z_out = $z_in1 - $z_in2;
     
-    if ($z_out->{re} == FLT_MIN() && $z_out->{im} == FLT_MIN()) {
+    if ($z_out->{x} == FLT_MIN() && $z_out->{y} == FLT_MIN()) {
       return 1;
     }
     
@@ -147,7 +147,7 @@ package TestCase::Complex {
     my $z_in2 = complexf(0.5f, 0.125f);
     my $z_out = $z_in1 * $z_in2;
     
-    if ($z_out->{re} == 0.0625 && $z_out->{im} == 0.28125) {
+    if ($z_out->{x} == 0.0625 && $z_out->{y} == 0.28125) {
       return 1;
     }
     
@@ -158,7 +158,7 @@ package TestCase::Complex {
     my $z_in2 = complexf(1, 1);
     my $z_out = $z_in1 * $z_in2;
     
-    if ($z_out->{re} == FLT_MIN() && $z_out->{im} == FLT_MIN()) {
+    if ($z_out->{x} == FLT_MIN() && $z_out->{y} == FLT_MIN()) {
       return 1;
     }
     
@@ -170,7 +170,7 @@ package TestCase::Complex {
     my $z_in2 = complexf(0.5f, 0.125f);
     my $z_out = $z_in1 / $z_in2;
     
-    if (($z_out->{re} - 0.70588) < 0.00001 && ($z_out->{im} - 0.82352) < 0.00001) {
+    if (($z_out->{x} - 0.70588) < 0.00001 && ($z_out->{y} - 0.82352) < 0.00001) {
       return 1;
     }
     
@@ -182,7 +182,7 @@ package TestCase::Complex {
     my $z_in2 = complexf(1, 0);
     my $z_out = $z_in1 / $z_in2;
     
-    if ($z_out->{re} == FLT_MIN() && $z_out->{im} == 0) {
+    if ($z_out->{x} == FLT_MIN() && $z_out->{y} == 0) {
       return 1;
     }
     
