@@ -1066,9 +1066,9 @@ package TestCase::Lib::SPVM::Util {
       [(float)1,  3, 5]
     );
 
-    if ($z_array->[0]{re} == FLT_MIN() && $z_array->[0]{im} == 1
-      && $z_array->[1]{re} == 2 && $z_array->[1]{im} == 3
-      && $z_array->[2]{re} == 4 && $z_array->[2]{im} == 5)
+    if ($z_array->[0]{x} == FLT_MIN() && $z_array->[0]{y} == 1
+      && $z_array->[1]{x} == 2 && $z_array->[1]{y} == 3
+      && $z_array->[2]{x} == 4 && $z_array->[2]{y} == 5)
     {
       return 1;
     }
@@ -1082,9 +1082,9 @@ package TestCase::Lib::SPVM::Util {
       [(double)1, 3, 5]
     );
 
-    if ($z_array->[0]{re} == DBL_MIN() && $z_array->[0]{im} == 1
-      && $z_array->[1]{re} == 2 && $z_array->[1]{im} == 3
-      && $z_array->[2]{re} == 4 && $z_array->[2]{im} == 5)
+    if ($z_array->[0]{x} == DBL_MIN() && $z_array->[0]{y} == 1
+      && $z_array->[1]{x} == 2 && $z_array->[1]{y} == 3
+      && $z_array->[2]{x} == 4 && $z_array->[2]{y} == 5)
     {
       return 1;
     }
@@ -1094,7 +1094,7 @@ package TestCase::Lib::SPVM::Util {
   
   sub test_complexf : int () {
     my $z = complexf(FLT_MIN(), FLT_MIN() + 1);
-    if ($z->{re} == FLT_MIN() && $z->{im} == FLT_MIN() + 1) {
+    if ($z->{x} == FLT_MIN() && $z->{y} == FLT_MIN() + 1) {
       return 1;
     }
     
@@ -1103,7 +1103,7 @@ package TestCase::Lib::SPVM::Util {
 
   sub test_complexd : int () {
     my $z = complexd(DBL_MIN(), DBL_MIN() + 1);
-    if ($z->{re} == DBL_MIN() && $z->{im} == DBL_MIN() + 1) {
+    if ($z->{x} == DBL_MIN() && $z->{y} == DBL_MIN() + 1) {
       return 1;
     }
     
