@@ -9,7 +9,8 @@
   - add SPVM::NDArray::Double
   - add SPVM::NDArray::String
   - fix module load bug
-  
+  - change SPVM::Complex_2x(x is b, s, i, l, f, and d) field name re to x, im to y, 
+  - add SPVM::Quaternion_4x((x is b, s, i, l, f, and d).
 0.07 2020-01-30
   - remove fileno, set_binmode methods because file nomber is not portable.
   - add warn and print empty string and undef spec
